deployment/gateway-api/routes/gateway-service-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-service-route
  namespace: reversetender-prod
  labels:
    app: gateway-service
    tier: backend
spec:
  parentRefs:
  - name: rpc-gateway
    namespace: reversetender-prod
  hostnames:
  - "api.reversetender.sa"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /rpc/gateway
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /rpc
    backendRefs:
    - name: gateway-service-rpc
      port: 8009
      weight: 100
  - matches:
    - path:
        type: PathPrefix
        value: /health/gateway
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /health
    backendRefs:
    - name: gateway-service-rpc
      port: 8000
      weight: 100
